[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.32.3",
    "beautifulsoup4>=4.12.0",
    "braintree>=4.0.0",
    "python-telegram-bot>=22.2",
    "trafilatura>=2.0.0",
    "telegram>=0.0.1",
    "sqlalchemy>=2.0.41",
    "psycopg2-binary>=2.9.10",
    "faker>=37.4.0",
]

